--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
+/.idea/*
 /web/bundles/
-/web/uploads/*
+/app/bootstrap.php.cache
+/app/cache/*
 /app/config/parameters.yml
-/var/bootstrap.php.cache
-/var/cache/*
-/var/logs/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
+/app/logs/*
+!app/cache/.gitkeep
+!app/logs/.gitkeep
 /build/
 /vendor/
 /bin/
-!bin/console
-!bin/symfony_requirements
 /composer.phar
-/composer.lock
-/.idea/*
