--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,2 +1,7 @@
+ef_connect:
+    pattern:  /efconnect
+    defaults: { _controller: FMElfinderBundle:Elfinder:load }
+
 elfinder:
-     resource: "@FMElfinderBundle/Resources/config/routing.yml"
+    pattern: /
+    defaults: { _controller: FMElfinderBundle:Elfinder:show }
